# hanime1-downloader

./: .gitignore  LICENSE  README.md  README_EN.md  run.bat  run.ps1  run.sh  setup.bat  setup.ps1  setup.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/download/: bulk-urls-section.tsx  download-section.tsx  search-section.tsx  task-card.tsx  task-list.tsx  video-card.tsx  video-grid.tsx  video-info-card.tsx
frontend/src/components/layout/: header.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  language-switcher.tsx  progress.tsx  select.tsx  sonner.tsx  tabs.tsx
frontend/src/contexts/: language-context.tsx
frontend/src/hooks/: use-bulk-urls.ts  use-search.ts  use-tasks.ts  use-websocket.ts
frontend/src/i18n/: translations.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: task-store.ts
frontend/src/types/: api.ts
hentai/: README.md  config.py  main.py  pyproject.toml  requirements.txt
hentai/api/: __init__.py  models.py  server.py  websocket.py
hentai/core/: __init__.py  downloader.py  scraper.py  task_manager.py
