[project]
name = "hanime1-downloader"
version = "1.0.0"
description = "Modern async video downloader with WebUI for hanime1.me"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "jie"}
]

dependencies = [
    # Async scraping and downloading
    "playwright>=1.41.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.3",
    "aiofiles>=23.2.1",
    
    # Web framework
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "websockets>=12.0",
    
    # Data validation
    "pydantic>=2.6.1",
    
    # Utilities
    "loguru>=0.7.2",
    "pymongo>=4.6.1",
    "fake-useragent>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
hanime-dl = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "web"]
only-include = [
    "api/",
    "core/",
    "web/",
    "config.py",
    "main.py",
]

